# catss

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  sources.md
data/catss/: Computer Assisted Tools for Septuagint_Scriptural Study.html  catssbibliog.html  catssreport.html
data/catss/computer_related/: CATSS Greek Variants Documentation.txt
data/catss/greek_morph/: 57.Ezek1.mlxx  _web-version.html
data/catss/greek_variants/: 0-Explan.htm  0-Status.html  04Obadiah-v6.html  04Obadiah-v7.html  2Kings 1.xhtml
data/catss/greek_variants/1pentateuch/: 01Gen-Wevers-Intro.html  01Gen26-50-old.html  02Ex01-03.htm  02Exod-Wevers-Intro.html  03LEV1-6V.htm  03Lev-Wevers-Intro.html  04Num-Wevers-Intro.htm  04Num.html  05Deut-old.html  05Deut.html
data/catss/greek_variants/2historical/: 08-Ruth-2.html  08-Ruth-beta.txt  08Ruth.html  09-1Sam-beta.htm  (+16 more)
data/catss/parallel_hebrew_greek/: 42.Baruch.par
pytorch/notebooks/: DataLoader.ipynb  DataLoaderGreekMorph.ipynb  DataLoaderParallel.ipynb  Perseus.ipynb  ProjectGuttenbergDownloader.ipynb  WorkingBuildHebrewMapping.ipynb
pytorch/notebooks/.ipynb_checkpoints/: DataLoader-checkpoint.ipynb
source_files/catss/: catssbibliog.html
source_files/catss/computer_related/: x_ Review of Lange on Computer Reconstructions [1993].txt
source_files/catss/greek_variants/: 0-Explan.htm  0-Status.html  04Obadiah-v7.html  2Kings 1.xhtml
source_files/catss/kraftpub/: Digitization(1998).txt
source_files/catss/parallel_hebrew_greek/: 00.ReadMe.txt  00.ReadReParallel.txt  00.UserDec.txt  22.Ps151.par  27.Sirach.par
(+549 files in other folders)
