[metadata]
name = catss-nlp-noahkrieger
version = 0.0.1
author = Noah Krieger
author_email = noahkrieger@google.com
description = NLP toolkit for the study of the Septuagint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noahkrieger/catss
project_urls =
    Bug Tracker = https://github.com/noahkrieger/catss/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src